--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,14 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
-  google_maps_flutter: ^0.5.25+1
-  google_maps_webservice: ^0.0.13
+  google_maps_flutter: ^0.5.11
   http: ^0.12.0+1
   json_serializable: ^2.0.2
   cloud_firestore: ^0.9.13+1
   rflutter_alert: ^1.0.3
-  firebase_core: ^0.3.0
+  webview_flutter: ^0.3.19+9
+  url_launcher: ^5.4.2
+  dio: ^3.0.9
 
 dev_dependencies:
   flutter_test:
