theme font Montserrat Alternates added added an animated gif to the quiz_screen fixed layout sizes at quiz_screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,3 +30,9 @@ flutter:
 
   assets:
   - images/
+
+
+  fonts:
+   - family: MontserratAlternates
+     fonts:
+       - asset: assets/fonts/MontserratAlternates-Regular.ttf
