--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   json_serializable: ^2.0.2
   cloud_firestore: ^0.13.4+2
   webview_flutter: ^0.3.19+9
+  flutter_webview_plugin: ^0.3.11
   url_launcher: ^5.4.2
   dio: ^3.0.9
   firebase_core: ^0.4.4+3
@@ -36,3 +37,7 @@ flutter:
    - family: MontserratAlternates
      fonts:
        - asset: assets/fonts/MontserratAlternates-Regular.ttf
+   - family: ComicNeue
+     fonts:
+       - asset: assets/fonts/ComicNeue-Regular.ttf
+
