--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,12 @@ dependencies:
   cloud_firestore: ^0.13.4+2
   webview_flutter: ^0.3.19+9
   flutter_webview_plugin: ^0.3.11
+  #TODO: pick one
+  #choose between webview_flutter or flutter_webview_plugin
   url_launcher: ^5.4.2
   dio: ^3.0.9
   firebase_core: ^0.4.4+3
+  font_awesome_flutter: ^8.7.0
 
 dev_dependencies:
   flutter_test:
