--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   url_launcher: ^5.4.2
   dio: ^3.0.9
   firebase_core: ^0.4.4+3
-
+  shared_preferences: ^0.5.7
+  flutter_spinkit: "^4.1.2"
 
 
 
