--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   dio: ^3.0.9
   firebase_core: ^0.4.4+3
   font_awesome_flutter: ^8.7.0
+  shared_preferences: ^0.5.7
+  flutter_spinkit: "^4.1.2"
 
 dev_dependencies:
   flutter_test:
