--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   font_awesome_flutter: ^8.7.0
   shared_preferences: ^0.5.7
   flutter_spinkit: "^4.1.2"
+  web3dart: ^1.2.3
+  bip39: ^1.0.3
+  bitcoin_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
