--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   firebase_core: ^0.4.4+3
   shared_preferences: ^0.5.7
   flutter_spinkit: "^4.1.2"
+  web3dart: ^1.2.3
+  bip39: ^1.0.3
+  bitcoin_flutter: ^2.0.0
 
 
 
