--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   font_awesome_flutter: ^8.7.0
   shared_preferences: ^0.5.7
   flutter_spinkit: "^4.1.2"
+  hex: ^0.1.2
   web3dart: ^1.2.3
   bip39: ^1.0.3
   bitcoin_flutter: ^2.0.0
@@ -36,6 +37,7 @@ flutter:
 
   assets:
   - images/
+  - assets/StandardToken.json
 
 
   fonts:
