--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   web3dart: ^1.2.3
   bip39: ^1.0.3
   bitcoin_flutter: ^2.0.0
+  qrscan: ^0.2.17
 
 dev_dependencies:
   flutter_test:
