--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   dio: ^3.0.9
   firebase_core: ^0.4.4+3
   font_awesome_flutter: ^8.7.0
+  flutter_svg: ^0.17.4
 
 dev_dependencies:
   flutter_test:
