--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   bip39: ^1.0.3
   bitcoin_flutter: ^2.0.0
   qrscan: ^0.2.17
+  toast: ^0.1.5
 
 dev_dependencies:
   flutter_test:
