--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,11 @@ dependencies:
   web3dart: ^1.2.3
   bip39: ^1.0.3
   bitcoin_flutter: ^2.0.0
-  qrscan: ^0.2.17
   toast: ^0.1.5
-
+  firebase_auth: ^0.16.0
+  google_sign_in: ^4.4.4
+  qr_flutter: ^3.1.0
+  barcode_scan: "^1.0.0"
 dev_dependencies:
   flutter_test:
     sdk: flutter
