--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   google_sign_in: ^4.4.4
   qr_flutter: ^3.1.0
   barcode_scan: "^1.0.0"
+  email_validator: '^1.0.0'
+  file_picker: ^1.8.0+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -43,6 +45,7 @@ flutter:
   assets:
   - images/
   - assets/StandardToken.json
+  - visa.png
 
 
   fonts:
